--- a/Magic_Inventory/Views/Owner/Index.cshtml
+++ b/Magic_Inventory/Views/Owner/Index.cshtml
@@ -19,7 +19,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.ProductID)
             </th>
-          
+            <th>
+                @Html.DisplayNameFor(model => model.Product.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Product.Price)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.StockLevel)
             </th>
@@ -32,7 +37,12 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.ProductID)
                 </td>
-              
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product.Price)
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.StockLevel)
                 </td>
