--- a/Magic_Inventory/Views/_ViewImports.cshtml
+++ b/Magic_Inventory/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using Magic_Inventory
 @using Magic_Inventory.Models
+@using Magic_Inventory.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
